[B]v1.26.0 (Monday, 12 September 2016):[/B]
  - Fixed Upload.af - now uses https which may not work on Andriod platforms running anything less than Krypton
  - ClicknUpload now requires Krypton, they have updated their ssl which Jarvis and earlier do not support
  - General fixes for Krypton
  
[B]v1.25.0 (Thursday, 18 August 2016):[/B]
  - Fixed UploadX
  - Fixed error with unsupported hosts with RD enabled

[B]v1.24.0 (Saturday, 14 May 2016):[/B]
  - Fixed ClicknUpload resolver
  - Fixed UploadX resolver
  - Fixed TV Show & Movie list script errors

[B]v1.23.0 (Wednesday, 27 January 2016):[/B]
  - Updated Real-Debrid client to use Icefilms own (should have no affects)
  - Rolled back changes to HugeFiles to 1.18.0 version, working again
  
[B]v1.22.0 (Wednesday, 20 January 2016):[/B]
  - Added KingFiles resolver
  - Updated Real-Debrid resolver to use new api

[B]v1.21.0 (Monday, 11 January 2016):[/B]
  - Fixed encoding error
  
[B]v1.20.0 (Wednesday, 23 December 2015):[/B]
  - Added UploadX resolver

[B]v1.19.0 (Friday, 19 December 2015):[/B]
  - Fixed HugeFiles resolver
  - Fixed Upload.af resolver

[B]v1.18.0 (Tuesday, 24 November 2015):[/B]
  - Fixed HugeFiles resolver
  
[B]v1.17.0 (Tuesday, 24 November 2015):[/B]
  - Fixed small bug with Recently Added lists
  - Fixed ClicknUpload resolver
  - Added new Upload.af resolver
  - Added indicators for hosts that Real-Debrid supports, shown by a yellow *RD next to the host name
  - Temporarily removed the main screen Recently Added, Latest Releases, Watching Now sections, don't worry they will be back very soon

[B]v1.16.0 (Monday, 19 October 2015):[/B]
  - Adjusted resume support, hopefully makes the resume more fluid
  - Added Recently Watched support, enable/disable in the addon settings
  - Added Watch Queue support, similar to Netflix, queue items to watch later, when you finish watching they are removed from the list
  - Fixed 180Upload resolver issue when the captcha is needed